--- a/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
+++ b/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
@@ -301,6 +301,7 @@
             <topicref href="guc-list.xml#tcp_keepalives_interval"/>
             <topicref href="guc-list.xml#temp_buffers"/>
             <topicref href="guc-list.xml#topic_k52_fqm_f3b"/>
+            <topicref href="guc-list.xml#temp_spill_files_tablespaces"/>
             <topicref href="guc-list.xml#TimeZone"/>
             <topicref href="guc-list.xml#timezone_abbreviations"/>
             <topicref href="guc-list.xml#track_activities"/>
